Upgraded sbt version to 0.12.3.